@@ -59,7 +59,6 @@ Otros TODO menos prioritarios, de aqui hasta el final del archivo:
 
 *** Audio ***
 
--Ay a midi y sn a midi. Tanto mid como midi device
 
 -comandos reset midi no hace nada?? Solo van en windows. Quiza enviar mejor un noteoff
 
@@ -67,8 +66,6 @@ Otros TODO menos prioritarios, de aqui hasta el final del archivo:
 o bien el mezclado de chip ay. Con que juegos se observa esto? O quiza con el test de 6/9 canales turbosound?
 
 -Generador archivos .ay según lo enviado a chip de sonido. Soporte turbosound
-
--Selección de instrumento midi en midi export y midi output, para cada canal
 
 -leer audio casette
 
