@@ -198,7 +198,7 @@ https://www.zxuno.com/forum/viewtopic.php?t=4091
 -agregar sensor temperatura cpu linux
 
 
--ay player en modo "jukebox" que permita agregar canciones ay a la lista
+-ay player en modo "jukebox" que permita agregar canciones ay a la lista, o bien una carpeta entera
 
 -frecuencias chips audio como sensores?
 
